[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_rapier3d = { version = "*", features = [ "simd-nightly", "debug-render-3d", "parallel"] }

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
