[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_rapier3d = { version = "*", features = [ "simd-nightly", "debug-render-3d" ] }
bevy_spectator = "0.7.0"
iyes_perf_ui = "0.4.0"
rand = "0.9.0"

[patch.crates-io]
bevy_spectator = { path = "./bevy_spectator_patched" }

[profile.dev.package."*"]
opt-level = 3
